Fix overflow error on small screens

--- a/src/app/roulette/roulette.component.css
+++ b/src/app/roulette/roulette.component.css
@@ -9,6 +9,7 @@
     display: grid;
     grid-template-columns: 1fr;
     position: relative;
+    overflow: hidden;
 }
 
 
